--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	<title>Portfolio</title>
 </head>
 <body>
-  <p>Hello, World!</p>
+  <p>Weclome to Sangwon's Portfolio website</p>
 </body>
 </html>
